# XPlatCppSdk

./: CMakeLists.txt
code/source/playfab/: PlayFabSettings.cpp
